--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
+# Node modules
+node_modules/
+.pnpm-store/
+.pnpm-debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files
-.env*
+# Next.js build output
+.next/
+out/
+dist/
 
-# vercel
-.vercel
+# Local history (VS Code extension)
+.history/
 
-# typescript
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Mac system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
+
+# Editor directories and files
+.vscode/
+.idea/
+
+# Typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# Optional npm cache directory
+.npm/
+
+# Husky
+.husky/
+
+# Optional: coverage reports
+coverage/
